Kubernetes/nginx-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: registry.digitalocean.com/osa-containerregistry/nginx:latest
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m" 
        ports:
        - containerPort: 80
