Kubernetes/nodejs-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: nodejs
        image: <IMAGE>
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m" 
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  annotations:
    kubernetes.digitalocean.com/load-balancer-id: "ams3-load-balancer-02"
    service.beta.kubernetes.io/do-loadbalancer-name: "nodejs"
    service.beta.kubernetes.io/do-loadbalancer-hostname: "nodejs.osaproject.es"
    service.beta.kubernetes.io/do-loadbalancer-size-unit: "1"
    service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: "false"
    #service.beta.kubernetes.io/do-loadbalancer-protocol: "https"
    #service.beta.kubernetes.io/do-loadbalancer-certificate-id: "your-certificate-id"
spec:
  type: LoadBalancer
  selector:
    app: nodejs
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
