Kubernetes/services-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs
  annotations:
    kubernetes.digitalocean.com/load-balancer-id: "ams3-load-balancer-01"
    service.beta.kubernetes.io/do-loadbalancer-name: "nodejs"
    service.beta.kubernetes.io/do-loadbalancer-hostname: "nodejs"
    service.beta.kubernetes.io/do-loadbalancer-size-unit: "1"
    service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: "false"
    #service.beta.kubernetes.io/do-loadbalancer-protocol: "https"
    #service.beta.kubernetes.io/do-loadbalancer-certificate-id: "your-certificate-id"
spec:
  type: LoadBalancer
  selector:
    app: nodejs
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
