Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    spec.ingressClassName: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  #tls:
    #- hosts:
      #- osaproject.es
      #- www.osaproject.es
      #- nodejs.osaproject.es
      #secretName: ssl
  rules:
  - host: "osaproject.es"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  - host: "nodejs.osaproject.es"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodejs-service
            port:
              number: 3000
